--- a/assets/style.css
+++ b/assets/style.css
@@ -23,3 +23,10 @@
     transform: scale(1.1);
     z-index: 1;
 }
+.navbar-brand{
+    padding: 0;
+    font-size: 1.5em;
+}
+.navbar-nav{
+    font-size: 1.5em;
+}
